--- a/index.html
+++ b/index.html
@@ -142,10 +142,11 @@
     <tr>
         <td>C-complement</td>
         <td>mg/mL</td>
-        <td>10.0</td>
+        <td>10</td>
         <td>mg/dL</td>
-        <td>C3: 65–190</td>
-        <td>C3: 6.5–19.0</td>
+        <td>C3: 65–190 <br> C4:15–50</td>
+        <td>C3: 6.5–19.0 <br> 1.5–50</td>
+        <td>C3: 6.5–19.0 <br> 1.5</td>
         <td><input type="number" oninput="convertSIToConventional(this.value, 10, 'conv_value_10')"></td>
         <td id="conv_value_10">0.00</td>
     </tr>
@@ -329,7 +330,7 @@
     <tr>
         <td>α-fetoprotein</td>
         <td>ng/mL</td>
-        <td>1.0</td>
+        <td>1.00</td>
         <td>kU/L</td>
         <td><10</td>
         <td><10</td>
@@ -354,7 +355,7 @@
         <td>60</td>
         <td>U/L</td>
         <td>male: 50 <br> female: 4–35</td>
-        <td>male: 0.83 <br> female 0.07 -0.58</td>
+        <td>male: 0.83 <br> female 0.07–0.58</td>
         <td><input type="number" oninput="convertSIToConventional(this.value, 60, 'conv_value_30')"></td>
         <td id="conv_value_30">0.00</td>
     </tr>
@@ -398,7 +399,7 @@
         <td>0.01</td>
         <td>proportion of 1.0</td>
         <td>male: 0.40–0.52 <br> female: 0.36–0.47</td>
-        <td>male: 40–52 <br> female: 36-47</td>
+        <td>male: 40–52 <br> female: 36–47</td>
         <td><input type="number" oninput="convertSIToConventional(this.value, 0.01, 'conv_value_35')"></td>
         <td id="conv_value_35">0.00</td>
     </tr>
@@ -409,7 +410,7 @@
         <td>10</td>
         <td>g/L</td>
         <td>male: 130–180 <br> female: 115–165</td>
-        <td>male: 13.0–18.0 <br> female: 11.5-16.5</td>
+        <td>male: 13.0–18.0 <br> female: 11.5–16.5</td>
         <td><input type="number" oninput="convertSIToConventional(this.value, 10, 'conv_value_37')"></td>
         <td id="conv_value_37">0.00</td>
     </tr>
@@ -497,7 +498,7 @@
         <td>3.671</td>
         <td>pmol/L</td>
         <td>male: <180 <br> female (follic): 200–400</td>
-        <td>male: <49.0 <br> female (follic):54.5-109.0</td>
+        <td>male: <49.0 <br> female (follic):54.5–109.0</td>
         <td><input type="number" oninput="convertSIToConventional(this.value, 3.671, 'conv_value_46')"></td>
         <td id="conv_value_46">0.00</td>
     </tr>
@@ -552,7 +553,7 @@
         <td>21.2</td>
         <td>mIU/L</td>
         <td>male: 100–360 <br> female: 100–600</td>
-        <td>male: 4.7–17.0 <br> female: 4.7-28.3</td>
+        <td>male: 4.7–17.0 <br> female: 4.7–28.3</td>
         <td><input type="number" oninput="convertSIToConventional(this.value, 21.2, 'conv_value_53')"></td>
         <td id="conv_value_53">0.00</td>
     </tr>
@@ -560,7 +561,7 @@
     <tr>
         <td>prostate-specific antigen (PSA)</td>
         <td>ng/mL</td>
-        <td>1.</td>
+        <td>1.0</td>
         <td>µg/L</td>
         <td>under 40 yrs: <2.0 <br> over 40 yrs: <4.0</td>
         <td>under 40 yrs: <2.0 <br> over 40 yrs: <4.0</td>
@@ -607,7 +608,7 @@
         <td>0.0347</td>
         <td>nmol/L</td>
         <td>male: 9.0–35.0 <br> female: 0.5–3.0</td>
-        <td>male: 259–1009 <br> female: 14-86</td>
+        <td>male: 259–1009 <br> female: 14–86</td>
         <td><input type="number" oninput="convertSIToConventional(this.value, 0.0347, 'conv_value_60')"></td>
         <td id="conv_value_60">0.00</td>
     </tr>
