--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
         <td>mg/dL</td>
         <td>60</td>
         <td>U/L</td>
-        <td>male: 50 <br> female: 4–35</td>
-        <td>male: 0.83 <br> female 0.07–0.58</td>
+        <td>male: <50 <br> female: 4–35</td>
+        <td>male: <0.83 <br> female 0.07–0.58</td>
         <td><input type="number" oninput="convertSIToConventional(this.value, 60, 'conv_value_30')"></td>
         <td id="conv_value_30">0.00</td>
     </tr>
